--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.1.0",
     "geist": "^1.3.0",
     "next": "^14.2.12",
